[project]
name = "hormuz-tracker"
version = "0.1.0"
description = "Real-time AIS ship tracker for the Strait of Hormuz"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.7.9",
    "fastapi>=0.116.0",
    "python-dotenv>=1.1.0",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.0",
]

[project.scripts]
hormuz-tracker = "main:run"
hormuz-tracker-dev = "main:run_dev"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "dev"]
